# LearnOpenGL

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
res/: basic.shader
res/shader/: basic.shader  batch.shader  light.shader  obj.shader  simple.shader  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv
src/: Application.cpp  Application.hpp  Layer.hpp  LearanVulkan.md  LearnVulkan.cpp  camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/Graphics/Render/: RenderGraph.cpp  RenderGraph.hpp  RenderResource.cpp  RenderResource.hpp  RenderStage.cpp  RenderStage.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderType.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Graphics/Render/Passes/: Shader.hpp  UiPass.cpp  UiPass.hpp
src/Graphics/interface/: render_type.h  rhi.h  rhi_struct.h
src/Graphics/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h
src/Gui/: MainPanel.cpp  UiSystem.hpp
src/Layers/: LightLayer.hpp  TestVulkanLayer.cpp  TestVulkanLayer.hpp
src/LearnVulkan/: Application.cpp  Application.hpp  Layer.cpp  LayerStack.cpp  LayerStack.hpp
src/LearnVulkan/Graphics/Render/: RenderSystem.cpp  RenderSystem.hpp
src/LearnVulkan/Graphics/Render/Passes/: UiPass.cpp  UiPass.hpp
src/LearnVulkan/Graphics/interface/: rhi_struct.h
src/LearnVulkan/Graphics/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h
src/LearnVulkan/Gui/: MainPanel.cpp  MainPanel.hpp  Panel.hpp  UiSystem.cpp  UiSystem.hpp
src/LearnVulkan/Layers/: LightLayer.cpp  LightLayer.hpp
src/redlive/: redlive.cpp  redlive.h
src/tests/: test.cpp  test.h  test_3d.cpp  test_3d.h  test_batch_render.cpp  test_batch_render.h  test_clear_color.cpp  test_clear_color.h  test_light.cpp  test_light.h  test_menu.cpp  test_menu.h  test_texture_2d.cpp  test_texture_2d.h
